--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app">
       <h2>{{ currentCoin }}</h2>
       <svg width="40%" viewBox="0 0 440 440">
+        <!-- Horiztonal Bars -->
         <g v-for="bar in barArray">
           <text
             x="0"
@@ -28,7 +29,17 @@
           >
           </rect>
         </g>
+        <!-- Vertical Bars -->
         <g v-for="(price, index) in pricesNorm">
+          <rect
+            class="textBoxBG"
+            v-bind:id="'textBoxBG' + index"
+            v-bind:x="price.counter"
+            v-bind:y="375 - price.normHigh"
+            height="21"
+            width="30"
+          >
+          </rect>
           <text
             class="text"
             v-bind:id="'textBox' + index"
@@ -61,6 +72,16 @@
         <button class="title graphButton" v-on:click="changeMode('hourly')">1hr</button>
       </div>
       <div class="container">
+        <svg id="tableBG">
+          <rect
+            id="tableBGBar"
+            x="0"
+            v-bind:y="hoverBarY"
+            width="100%"
+            height="10%"
+          >
+          </rect>
+        </svg>
         <div>
           <div class="box"></div>
           <button class="box title tableButton" id="marketCap" v-on:click="titleClick('marketCap')">Market Cap</button>
