--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
       </div>
     </div>
 
-    <script src="https://unpkg.com/vue"></script>
+    <!-- DEV -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    <!-- PROD -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="app.js"></script>
   </body>
 </html>
